# haskell-templates

./: README.md  cookiecutter.json
package-name/: CHANGELOG.md.template  flake.nix.template  package-name.cabal.template
{{cookiecutter.package-name}}/: CHANGELOG.md  Melude.hs  flake.nix  {{cookiecutter.package-name}}.cabal
{{cookiecutter.package_name}}/: .gitignore  .hlint.yaml  CHANGELOG.md  cabal.project  flake.nix  fourmolu.yaml  {{cookiecutter.package_name}}.cabal
{{cookiecutter.package_name}}/Melude/: Either.hs  List.hs  Maybe.hs  Result.hs  ResultT.hs
{{cookiecutter.package_name}}/src/{{cookiecutter.package_name}}/: Prelude.hs
