cabal-version:       3.0
name:                {{cookiecutter.package_name}}
version:             0.1.0.0
-- synopsis:
-- description:
-- bug-reports:
-- license:
license-file:        LICENSE
author:              {{cookiecutter.author}}
maintainer:          {{cookiecutter.author}} <{{cookiecutter.email}}>
-- copyright:
-- category:
build-type:          Simple
extra-source-files:  CHANGELOG.md

executable {{cookiecutter.package_name}}
  hs-source-dirs:      app
  main-is:             Main.hs

  ghc-options:         -Wall
                       -Werror
                       -Wincomplete-uni-patterns
                       -Wincomplete-record-updates
                       -Wpartial-fields
                       -Wmissing-home-modules
                       -Widentities
                       -Wredundant-constraints
                       -Wcpp-undef
                       -Wmissing-export-lists

  build-depends: 
    base >=4.14 && < 4.15,
    aeson,
    async,
    text,
    transformers,
    bytestring,
    scientific,
    optics,
    streamly,
    time,
    containers,
    effectful,
    effectful-th,
    hs-opentelemetry-api,
    hs-opentelemetry-sdk,
    optics,
    safe-exceptions,
    unordered-containers

  other-modules:

  default-extensions:
    GHC2021
    DuplicateRecordFields
    NoFieldSelectors
    DerivingVia
    GADTs 
    OverloadedStrings
    PatternSynonyms
    ViewPatterns
    TemplateHaskell
    TypeFamilies 
    DataKinds 
    LambdaCase 
    DefaultSignatures
    RoleAnnotations
    OverloadedLabels
    -- OverloadedRecordDot
    -- OverloadedRecordUpdate
    -- RecordWildCards
    -- NegativeLiterals
    -- UnicodeSyntax
    -- FunctionalDependencies
    -- NoMonomorphismRestriction -- default
    -- ExplicitNamespaces -- implied by TypeOperators
    -- NullaryTypeClasses -- replaced by MultiParamTypeClasses
    -- OverloadedLists
    -- ParallelListComp
    -- UnliftedNewtypes
    -- BlockArguments
    -- DisambiguateRecordFields -- implied by RecordWildCards, DuplicateRecordFields
    -- LexicalNegation
    -- LiberalTypeSynonyms
    -- MultiWayIf
    -- RecursiveDo
    -- TypeFamilyDependencies
    -- NondecreasingIndentation
    -- PartialTypeSignatures
    -- TemplateHaskellQuotes -- implied by TemplateHaskell
    -- ApplicativeDo
    -- Arrows
    -- CApiFFI
    -- MagicHash
    -- PackageImports
    -- QuantifiedConstraints
    -- QuasiQuotes
    -- TypeInType -- deprecated
    -- UnboxedSums
    -- UnboxedTuples
    -- UnliftedFFITypes
    -- AllowAmbiguousTypes
    -- CPP
    -- CUSKs -- deprecated
    -- DatatypeContexts -- deprecated
    -- DeriveAnyClass
    -- ExtendedDefaultRules
    -- GHCForeignImportPrim
    -- ImplicitParams
    -- ImpredicativeTypes
    -- IncoherentInstances
    -- InterruptibleFFI
    -- LinearTypes
    -- MonadComprehensions
    -- NPlusKPatterns
    -- NoImplicitPrelude -- implied by RebindableSyntax
    -- OverlappingInstances -- deprecated
    -- QualifiedDo
    -- RebindableSyntax
    -- Safe
    -- StaticPointers
    -- Strict
    -- StrictData
    -- TransformListComp
    -- TrustWorthy
    -- UndecidableInstances
    -- UndecidableSuperClasses
    -- Unsafe

  -- hs-source-dirs:
  default-language:    Haskell2010

