cabal-version:       3.0
name:                {{cookiecutter.package_name}}
version:             0.1.0.0
-- synopsis:
-- description:
-- bug-reports:
-- license:
-- license-file:        LICENSE
author:              {{cookiecutter.author}}
maintainer:          {{cookiecutter.author}} <{{cookiecutter.email}}>
-- copyright:
-- category:
build-type:          Simple
extra-source-files:  CHANGELOG.md

common common-lang
  ghc-options:         -Wall
                       -Werror
                       -Wincomplete-uni-patterns
                       -Wincomplete-record-updates
                       -Wpartial-fields
                       -Wmissing-home-modules
                       -Widentities
                       -Wredundant-constraints
                       -Wcpp-undef
                       -Wmissing-export-lists
                       -threaded

  build-depends:
    base,
    aeson,
    async,
    text,
    transformers,
    bytestring,
    scientific,
    optics,
    streamly,
    time,
    containers,
    effectful,
    effectful-th,
    hs-opentelemetry-api,
    hs-opentelemetry-sdk,
    optics,
    safe-exceptions,
    unordered-containers

  default-extensions:
    GHC2021
    DuplicateRecordFields
    NoFieldSelectors
    DerivingVia
    GADTs 
    OverloadedStrings
    PatternSynonyms
    ViewPatterns
    TemplateHaskell
    TypeFamilies 
    DataKinds 
    LambdaCase 
    DefaultSignatures
    RoleAnnotations
    OverloadedLabels
    DeriveAnyClass

  default-language:    Haskell2010

executable {{cookiecutter.package_name}}
  import:
    common-lang

  hs-source-dirs:      app
  main-is:             Main.hs

  build-depends:
    {{cookiecutter.package_name}}
   

  other-modules:

library
  import:
    common-lang

  hs-source-dirs: src

  exposed-modules:

test-suite {{cookiecutter.package_name}}-tests
  import: common-lang
  type: exitcode-stdio-1.0
  main-is: Main.hs
  hs-source-dirs: test

  other-modules:

  build-depends:
    , tasty
    , tasty-hspec
    , hspec
    , hspec-expectations



