cabal-version:       3.8
name:                {{cookiecutter.package_name}}
version:             0.1.0.0
-- synopsis:
-- description:
-- bug-reports:
-- license:
-- license-file:        LICENSE
author:              {{cookiecutter.author}}
maintainer:          {{cookiecutter.author}} <{{cookiecutter.email}}>
-- copyright:
-- category:
build-type:          Simple
extra-source-files:  CHANGELOG.md

common common-options
  ghc-options:
    -Wall
    -Werror
    -Wincomplete-uni-patterns
    -Wincomplete-record-updates
    -Wpartial-fields
    -Wmissing-home-modules
    -Widentities
    -Wredundant-constraints
    -Wcpp-undef
    -Wmissing-export-lists
    -Wno-name-shadowing
    -Wno-unused-top-binds
    -Wno-unused-imports
    -fwrite-ide-info

  build-depends:
    base,
    aeson,
    async,
    text,
    transformers,
    bytestring,
    scientific,
    optics,
    streamly-core,
    time,
    containers,
    nonempty-containers
    unordered-containers
    semigroupoids,
    witherable,
    effectful,
    effectful-th,
    hs-opentelemetry-api,
    hs-opentelemetry-sdk,
    safe-exceptions,
    hashable,
    prettyprinter,
    extra,

  default-extensions:
    MultiWayIf
    OverloadedRecordDot
    DuplicateRecordFields
    NoFieldSelectors
    DerivingVia
    GADTs 
    OverloadedStrings
    PatternSynonyms
    ViewPatterns
    TemplateHaskell
    TypeFamilies 
    DataKinds 
    LambdaCase 
    DefaultSignatures
    RoleAnnotations
    OverloadedLabels
    DeriveAnyClass

  default-language: GHC2021

common common-exec-options
  import:
    common-options

  ghc-options:
    -threaded
    -j
    +RTS
    -A128m
    -n2m
    -RTS


executable {{cookiecutter.package_name}}
  import:
    common-exec-options

  hs-source-dirs: app
  main-is: Main.hs

  build-depends:
    {{cookiecutter.package_name}}
   
  other-modules:

library
  import:
    common-options

  hs-source-dirs: src

  exposed-modules:

test-suite {{cookiecutter.package_name}}-tests
  import: 
    common-options
  type: exitcode-stdio-1.0
  main-is: Main.hs
  hs-source-dirs: test

  other-modules:

  build-depends:
    , tasty
    , tasty-hspec
    , hspec
    , hspec-expectations
